src/test/ui/consts/static_mut_containing_mut_ref2.stderr
error[E0017]: references in statics may only refer to immutable values
  --> $DIR/static_mut_containing_mut_ref2.rs:5:46
   |
LL | pub static mut STDERR_BUFFER: () = unsafe { *(&mut STDERR_BUFFER_SPACE) = 42; };
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ statics require immutable values

error: aborting due to previous error

For more information about this error, try `rustc --explain E0017`.
